All Section Z-Index fixed

--- a/assets/component-sustainability-hero.css
+++ b/assets/component-sustainability-hero.css
@@ -62,7 +62,7 @@
   top: 80px;
   left: 48px;
   max-width: 554px;
-  z-index: 10;
+  z-index: 1;
 }
 
 .sustainability-hero__heading {
