--- a/assets/section-brand-story.css
+++ b/assets/section-brand-story.css
@@ -45,7 +45,7 @@
   align-items: center;
   padding: 0 0 0 56px;
   position: relative;
-  z-index: 4;
+  z-index: 1;
 }
 
 .custom-section-brand-story__content-inner {
