--- a/assets/section-featured-category-slider.css
+++ b/assets/section-featured-category-slider.css
@@ -12,8 +12,7 @@
 
 @font-face {
   font-family: 'Neue Montreal';
-  src: url('NeueMontreal-Regular.woff2') format('woff2'),
-    url('NeueMontreal-Regular.woff') format('woff');
+  src: url('NeueMontreal-Regular.woff2') format('woff2'), url('NeueMontreal-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -115,7 +114,7 @@
   width: 100%;
   max-width: 1440px;
   height: 100%;
-  z-index: 10;
+  z-index: 1;
 }
 
 /* Element - Desktop Category Names */
