--- a/assets/section-shop-collection-arch.css
+++ b/assets/section-shop-collection-arch.css
@@ -150,7 +150,7 @@
    ============================================================================ */
 .custom-section-shop-collection-arch__center {
   position: relative;
-  z-index: 4;
+  z-index: 1;
   width: 472px;
   height: 712px;
   flex-shrink: 0;
